assets/styles/framework/_card.scss
$component-identifier: '.card';

#{$component-identifier} {
  border: 1px solid $color-gray3;
  border-radius: $border-radius-medium;
  background-color: $color-white;

  &__header {
    position: relative;
    background-color: $color-gray3;
    display: inline-block;
    height: 100%;
    width: 100%;
    padding: 6px 10px;
    font-size: 1.6rem;
    font-weight: 600;
  }

  &__header-arrow {
    position: absolute;
    left: calc(50% - 6px);

    &.m-bottom {
      @include triangle(12px, $color-gray3, down);

      bottom: -6px;
    }

    &.m-top {
      @include triangle(12px, $color-gray3, up);

      top: -6px;
    }
  }

  &__content {
    position: relative;
    padding: 10px;
  }

  &__content-arrow {
    position: absolute;
    left: calc(50% - 6px);
    top: -6px;
  }

  &__content-arrow-border {
    @include triangle(12px, $color-gray3, up);

    position: absolute;
  }

  &__content-arrow-background {
    position: absolute;
    @include triangle(12px, $color-white, up);

    position: absolute;
    top: 1px;
  }

  &.has-clickability {
    &:hover {
      cursor: pointer;
      background-color: $color-primary1;
    }

    &.is-pressed {
      background-color: lighten($color-primary1, 55%);
    }
  }
}

$component-identifier: '';

